<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home screen</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="drawer_header_text">Shopping time?</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="hello">Hello!</string>
    <string name="nick">Set your nick in settings</string>
    <string name="invitation_label">Invitation text</string>
    <string name="invitation_hint">Set your custom invitation</string>
    <string name="nick_label">Nickname</string>
    <string name="nick_hint">Set your nickname</string>
    <string name="save">Save</string>
    <string name="profile">Profile picture</string>
    <string name="App_name">ShopList</string>
    <string name="reset">Reset</string>
    <string name="shopping_list">Shopping List</string>
    <string name="dodaj">Add to list</string>
    <string name="usun">Delete selected</string>
    <string name="cancel">Cancel</string>
    <string name="product">Product</string>
    <string name="use">Use</string>
    <string name="amount">Amount</string>
    <string name="category">Product type</string>
    <string name="available">Available</string>
    <string name="product_hint">Product name</string>
    <string name="use_hint">What is it for</string>
    <string name="back">Back</string>
    <string name="modify">Modify</string>
    <string name="product_use">Needed for </string>
    <string name="amount_detail">Buy </string>
    <string name="available_1">It </string>
    <string name="available_2"> available</string>
    <string name="bought">Bought</string>
    <string name="theme1">Theme 1</string>
    <string name="theme2">Theme 2</string>
    <string name="theme3">Theme 3</string>
    <string name="yousure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure to delete item?</string>
    <string name="sure_photo">Are you sure to delete this photo?</string>
    <string name="add_photo">Add photo</string>
    <string name="set">Set</string>
</resources>
