<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/startScreenFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/icons8_home_96"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/listFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/list"
        android:icon="@drawable/icons8_list_64"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/settingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings"
        android:icon="@drawable/icons8_settings_100"
        android:iconTint="@color/white"/>
</menu>