<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".List.ModifyFragment">

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/use"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use"
        app:layout_constraintTop_toBottomOf="@id/product"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/product_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_hint"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product"
        app:layout_constraintBottom_toBottomOf="@id/product"
        android:layout_marginLeft="160dp"/>

    <EditText
        android:id="@+id/use_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/use_hint"
        android:inputType="text"
        android:layout_marginLeft="160dp"
        app:layout_constraintTop_toTopOf="@id/use"
        app:layout_constraintBottom_toBottomOf="@id/use"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <NumberPicker
        android:id="@+id/amount_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/use_input"
        app:layout_constraintRight_toRightOf="@id/use_input"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintTop_toTopOf="@id/amount" />

    <TextView
        android:id="@+id/amount"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"/>

    <Spinner
        android:id="@+id/product_type_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/amount_input"
        app:layout_constraintRight_toRightOf="@id/amount_input"
        app:layout_constraintTop_toTopOf="@id/product_type"
        app:layout_constraintBottom_toBottomOf="@id/product_type"/>

    <TextView
        android:id="@+id/product_type"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/available"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_type"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/bought"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bought"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/available"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"/>

    <Switch
        android:id="@+id/available_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/available"
        app:layout_constraintBottom_toBottomOf="@id/available"
        app:layout_constraintLeft_toLeftOf="@id/amount_input"
        app:layout_constraintRight_toRightOf="@id/amount_input" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_button"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/available_input"
        app:layout_constraintRight_toRightOf="@id/available_input"
        app:layout_constraintTop_toTopOf="@id/bought"
        app:layout_constraintBottom_toBottomOf="@id/bought"/>
</androidx.constraintlayout.widget.ConstraintLayout>