<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Settings.HomeScreenSettingsFragment">

    <TextView
        android:id="@+id/invitation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitation_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/nick_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nick_input"
        app:layout_constraintTop_toBottomOf="@id/invitation_input"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/invitation_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/invitation_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invitation_label"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/nick_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nick_hint"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nick_label"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toRightOf="@id/reset_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>