<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".List.DetailsFragment">

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/use"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use"
        app:layout_constraintTop_toBottomOf="@id/product"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/amount"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/product_type"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintLeft_toRightOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"/>

    <TextView
        android:id="@+id/available"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_type"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/modify_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/modify_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/back_button"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/category"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/product_type"
        app:layout_constraintBottom_toBottomOf="@id/product_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_type"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:id="@+id/bought"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/available"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>